# XDevChallenge

./: .gitignore  LICENSE  README.md
backend/: groktest.py  hashtagtest.py  requirements.txt  searchAllTest.py  server.py  stockAPITest.py  stockdata.py  twitterAPItest.py
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
x-dev-challenge/: index.html  package-lock.json  package.json  tailwind.config.js
x-dev-challenge/src/: App.tsx  StockApiReturn.ts  StockDataMap.ts  index.css
x-dev-challenge/src/components/: LineChart.tsx  ParticleBackground.tsx  StockChart.tsx  card.tsx  chartMaker.tsx  searchBar.jsx  searchBar.tsx
